# parallel-IO-haskell-demo

./: README.md  parallelIO.cabal
src/: Main.hs
