name:                parallelIO
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/akazukin5151/parallelIO#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable parallelIO
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       monad-par >= 0.3.5,
                       abstract-par >= 0.3.3
  ghc-options:         -threaded
